--- a/day06/04.html
+++ b/day06/04.html
@@ -19,6 +19,7 @@
       width: 25%;
       padding: 0 10px;
       box-sizing: border-box;
+      border: 1px solid red;
     }
     .data img {
       width: 100%;
