--- a/day06/05.html
+++ b/day06/05.html
@@ -21,8 +21,8 @@
     .row {
       display: flex;
       flex-wrap: wrap;
-      margin-left: -15px;
-      margin-right: -15px;
+      /* margin-left: -15px; */
+      /* margin-right: -15px; */
     
     }
 
@@ -75,19 +75,19 @@
     .col-lg-12{ width: 100%;}
     }
     @media screen and (min-width:1200px) {
-    .col-xl-1{ width: 8.333333%;}
-    .col-xl-2{ width: 16.666666%;}
-    .col-xl-3{ width: 25%;}
-    .col-xl-4{ width: 33.333333%;}
-    .col-xl-5{ width: 41.666666%;}
-    .col-xl-6{ width: 50%;}
-    .col-xl-7{ width: 58.333333%;}
-    .col-xl-8{ width: 66.666666%;}
-    .col-xl-9{ width: 75%;}
-    .col-xl-10{ width: 83.333333%;}
-    .col-xl-11{ width: 91.666666%;}
-    .col-xl-12{ width: 100%;}
-    }
+      .col-xl-1{ width: 8.333333%;}
+      .col-xl-2{ width: 16.666666%;}
+      .col-xl-3{ width: 25%;}
+      .col-xl-4{ width: 33.333333%;}
+      .col-xl-5{ width: 41.666666%;}
+      .col-xl-6{ width: 50%;}
+      .col-xl-7{ width: 58.333333%;}
+      .col-xl-8{ width: 66.666666%;}
+      .col-xl-9{ width: 75%;}
+      .col-xl-10{ width: 83.333333%;}
+      .col-xl-11{ width: 91.666666%;}
+      .col-xl-12{ width: 100%;}
+      }
 
 
 
