--- a/day07/04-1.html
+++ b/day07/04-1.html
@@ -48,9 +48,7 @@
       position: relative;
     }
 
-    #menu-switch:checked ~ header .hb{
-      background-color: darkorange;
-    } 
+
 
     .hb span {
       width: 36px;
@@ -124,7 +122,7 @@
   </style>
 </head>
 <body>
-  <input type="checkbox" name="" id="menu-switch">
+  <input type="checkbox" name="" id="">
   <header>
     <div class="logo">
       <img src="https://fakeimg.pl/80x40/200">
@@ -157,3 +155,45 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+.hb span:nth-child(1){
+  top: 8px;
+  transform: rotate(0deg);
+  transition: .1s 0s , transform .1s 0s;
+}
+#menu-switch:checked ~ header .hb span:nth-child(1){
+  top: 18px;
+  transform: rotate(45deg);
+  transition: .1s .0s , transform .1s .0s; 
+}
+.hb span:nth-child(2){
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  opacity: 1;
+
+} 
+#menu-switch:checked ~ header .hb span:nth-child(2){
+  opacity: 0;
+   
+}
+
+
+.hb span:nth-child(3){
+  bottom: 8px;
+  transform: rotate(0deg);
+  transition: .1s  , transform .1s 0s; 
+}
+#menu-switch:checked ~ header .hb span:nth-child(3){
+  bottom: 18px;
+  transform: rotate(-45deg);
+  transition: .1s 0s , transform .1s 0s; 
+}
+
